# movies_service

./: .dockerignore  .env  .gitignore  Makefile  docker-compose.tests.yaml  docker-compose.yaml
etl_service/: Dockerfile  logger.py  main.py  pyproject.toml  settings.py
etl_service/documents/: genre.py  load_data.py  movie.py  person.py  queries.py
etl_service/helpers/: backoff_func_wrapper.py
etl_service/state_manager/: base_storage.py  json_file_storage.py  state_manager.py
fast_api/: Dockerfile  requirements.txt
fast_api/src/: main.py
fast_api/src/api/v1/: films.py  genres.py  persons.py
fast_api/src/core/: config.py
fast_api/src/models/: film.py  genre.py  mixins.py  person.py
fast_api/src/services/: __init__.py  db_managers.py  film.py  genres.py  persons.py  redis_service.py
movies_admin/: Dockerfile  entrypoint.sh  requirements.txt
movies_admin/config/: settings.py  urls.py
movies_admin/config/components/: database.py
movies_admin/movies/api/v1/: urls.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
nginx/conf.d/: default.conf
tests/: Dockerfile  entrypoint.sh
tests/functional/: .env.example  conftest.py  exer.py  requirements.txt  settings.py
tests/functional/fixtures/: connection.py  es_data.py
tests/functional/src/: test_films.py  test_genre.py  test_search.py
tests/functional/testdata/: index_settings.py  indexes.py
tests/functional/utils/: delete_data_es.py  wait_for_elastic.py  wait_for_redis.py
